--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure(2) do |config|
   end
   config.vm.define "ansiblee" do |ansible|
     ansible.vm.box = "ubuntu/trusty64"
-    ansible=machine.vm.network "private_network", ip: "192.168.0.25"
+    ansible.vm.network "private_network", ip: "192.168.0.25"
     ansible.vm.hostname = "ansible"
   end
 end
