--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -4,7 +4,7 @@ Vagrant.configure(2) do |config|
     webserver.vm.network "private_network", ip: "192.168.0.5"
     webserver.vm.hostname = "webserver"
   end
-  config.vm.define "ansiblee" do |ansible|
+  config.vm.define "ansible" do |ansible|
     ansible.vm.box = "ubuntu/trusty64"
     ansible.vm.network "private_network", ip: "192.168.0.25"
     ansible.vm.hostname = "ansible"
